[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "releasy"
version = "0.1.0"
description = "CLI tool for managing port branches, feature branches, and release construction"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pygithub>=2.1",
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
releasy = "releasy.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/releasy"]

[tool.hatch.build.targets.wheel.force-include]
"src/releasy/prompts" = "releasy/prompts"
"src/releasy/templates" = "releasy/templates"

[tool.ruff]
line-length = 100
target-version = "py39"
